# courier

./: .coveragerc  .gitattributes  .gitignore  pyproject.toml
.binder/: environment.yml
.ci_support/: environment.yml  lower-bounds.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: daily.yml  dependabot-pr.yml  pr-labeled.yml  pr-target-opened.yml  push-pull.yml  release.yml  weekly.yml
courier/: __init__.py  _version.py  base_client.py  exceptions.py  http_client.py  metadata.py  ontodocker.py
courier/http/: __init__.py  auth.py  request.py  url.py
courier/services/: __init__.py
courier/services/ckan/: __init__.py  actions.py  client.py  exceptions.py  models.py  packages.py  resources.py  response.py
courier/services/dataportal/: __init__.py  assets.py  client.py  datasets.py  metadata.py  models.py  rdf.py  sparql.py
courier/services/ontodocker/: __init__.py  _compat.py  client.py  datasets.py  endpoints.py  models.py  sparql.py
courier/services/zenodo/: __init__.py  _urls.py  client.py  depositions.py  exceptions.py  files.py  licenses.py  metadata.py  models.py
courier/transport/: request.py  url.py
docs/: README.md  conf.py  environment.yml  index.rst
docs/source/: metadata.md
notebooks/: DataportalClient.ipynb  HttpClient.ipynb  OntodockerClient.ipynb  ZenodoClient.ipynb  example.ipynb  fake_http_session.py
notebooks/resources/: test_dataset.ttl
praeco/: __init__.py  exceptions.py  http_client.py  metadata.py
praeco/services/: __init__.py
praeco/services/ckan/: __init__.py  actions.py  client.py  exceptions.py  packages.py  resources.py  response.py
praeco/services/dataportal/: __init__.py  assets.py  client.py  datasets.py  metadata.py  models.py  rdf.py  sparql.py
praeco/services/ontodocker/: __init__.py  _compat.py  client.py  datasets.py  endpoints.py  sparql.py
praeco/services/zenodo/: __init__.py  _response.py  _urls.py  client.py  depositions.py  exceptions.py  files.py  licenses.py  metadata.py
praeco/transport/: __init__.py  request.py  session.py  url.py
tests/unit/: test_base_client.py  test_exceptions.py  test_http_client.py  test_metadata.py  test_ontodocker_client.py  test_ontodocker_legacy_shim.py  test_publication_metadata_boundary.py  test_tests.py
tests/unit/http/: test_auth.py
tests/unit/http_access/: test_auth.py
tests/unit/services/ckan/: __init__.py  _helpers.py  test_client.py  test_packages.py  test_resources.py  test_response.py
tests/unit/services/dataportal/: __init__.py  _helpers.py  test_asset_models.py  test_assets.py  test_client.py  test_datasets.py  test_metadata.py  test_metadata_boundary.py  test_models.py  test_rdf.py  test_sparql.py
tests/unit/services/ontodocker/: test_compat.py
tests/unit/services/zenodo/: __init__.py  _helpers.py  test_client.py  test_depositions.py  test_files.py  test_licenses.py  test_metadata.py  test_response.py
tests/unit/transport/: test_auth.py  test_request.py  test_session.py  test_url.py
